chore: update .env.example with new configuration options
- Added application secret key and API server configuration settings.
- Introduced LangGraph orchestration parameters and enhanced rate limiting configurations.
- Updated Redis connection settings and added support for Upstash Redis.
- Included monitoring and observability settings for database and security checks.
- Added external API configuration options for Google Maps and Crawl4AI.

--- a/.env.example
+++ b/.env.example
@@ -14,91 +14,21 @@ DEBUG=false
 # Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 
-# =============================================================================
-# DATABASE CONFIGURATION (Supabase)
-# =============================================================================
-
-# Supabase project URL
-DATABASE_URL=https://your-project.supabase.co
-
-# Supabase service role key (keep secret!)
-DATABASE_KEY=your_service_role_key_here
-
-# Supabase public anon key
-DATABASE_PUBLIC_KEY=your_anon_key_here
-
-# Supabase JWT secret (keep secret!)
-DATABASE_JWT_SECRET=your_jwt_secret_here
+# Application secret key for encryption and signing (keep secret!)
+SECRET_KEY=your-application-secret-key-here
 
 # =============================================================================
-# REDIS/CACHE CONFIGURATION (DragonflyDB)
+# API SERVER CONFIGURATION
 # =============================================================================
 
-# Redis/DragonflyDB connection URL
-REDIS_URL=redis://localhost:6379/0
+# API server host
+TRIPSAGE_API_HOST=127.0.0.1
 
-# Redis password (if authentication enabled)
-REDIS_PASSWORD=your_redis_password_here
+# API server port
+TRIPSAGE_API_PORT=8001
 
-# Maximum concurrent connections
-REDIS_MAX_CONNECTIONS=10000
-
-# Cache TTL settings (seconds)
-CACHE_TTL_SHORT=300    # 5 minutes
-CACHE_TTL_MEDIUM=3600  # 1 hour
-CACHE_TTL_LONG=86400   # 24 hours
-
-# =============================================================================
-# AI/LLM CONFIGURATION
-# =============================================================================
-
-# OpenAI API key (required)
-OPENAI_API_KEY=your_openai_api_key_here
-
-# Default OpenAI model
-OPENAI_MODEL=gpt-4
-
-# =============================================================================
-# AGENT CONFIGURATION (DYNAMIC - NOT HARDCODED)
-# =============================================================================
-
-# Global Agent Defaults
-AGENT_DEFAULT_TEMPERATURE=0.7
-AGENT_DEFAULT_MAX_TOKENS=1000
-AGENT_DEFAULT_TOP_P=0.9
-AGENT_TIMEOUT_SECONDS=30
-
-# Environment-Specific Agent Settings
-AGENT_PRODUCTION_TEMPERATURE=0.3   # Conservative for production
-AGENT_DEVELOPMENT_TEMPERATURE=0.7  # More exploratory for development
-
-# Agent-Specific Temperature Settings
-BUDGET_AGENT_TEMPERATURE=0.2           # Low creativity, high accuracy
-DESTINATION_RESEARCH_TEMPERATURE=0.5   # Moderate creativity
-ITINERARY_AGENT_TEMPERATURE=0.4        # Structured creativity
-
-# =============================================================================
-# FEATURE TOGGLES (CONFIGURABLE COMPLEXITY)
-# =============================================================================
-
-# Enable LangGraph agent orchestration
-ENABLE_ADVANCED_AGENTS=false
-
-# Enable Mem0 AI memory system
-ENABLE_MEMORY_SYSTEM=true
-
-# Enable WebSocket real-time features
-ENABLE_REAL_TIME=true
-
-# Enable pgvector search capabilities
-ENABLE_VECTOR_SEARCH=true
-
-# Enable advanced monitoring and observability
-ENABLE_MONITORING=false
-
-# =============================================================================
-# API CONFIGURATION
-# =============================================================================
+# API server reload in development (true/false)
+TRIPSAGE_API_RELOAD=true
 
 # API metadata
 API_TITLE=TripSage API
@@ -109,16 +39,281 @@ API_PREFIX=/api/v1
 API_CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 API_CORS_CREDENTIALS=true
 
-# Rate limiting
-API_RATE_LIMIT_REQUESTS=100  # Requests per minute per IP
-API_RATE_LIMIT_WINDOW=60     # Window in seconds
+# =============================================================================
+# DATABASE CONFIGURATION (Supabase)
+# =============================================================================
 
-# Security
-API_ALLOWED_HOSTS=*
+# Supabase project URL
+DATABASE_URL=https://your-project.supabase.co
+
+# Supabase service role key (keep secret!)
+DATABASE_SERVICE_KEY=your_service_role_key_here
+
+# Supabase public anon key
+DATABASE_PUBLIC_KEY=your_anon_key_here
+
+# Supabase JWT secret (keep secret!)
+DATABASE_JWT_SECRET=your_jwt_secret_here
+
+# PostgreSQL connection URL (optional, overrides Supabase URL if provided)
+POSTGRES_URL=postgresql://postgres:your-password@aws-0-your-region.pooler.supabase.com:6543/postgres
+
+# Alternative database URL for scripts/tools
+SUPABASE_DB_URL=postgresql://postgres:your-password@db.your-project.supabase.co:5432/postgres
+
+# =============================================================================
+# CACHE/REDIS CONFIGURATION
+# =============================================================================
+
+# Redis connection URL
+REDIS_URL=redis://localhost:6379/0
+
+# Redis password (if authentication enabled)
+REDIS_PASSWORD=your_redis_password_here
+
+# Maximum concurrent connections
+REDIS_MAX_CONNECTIONS=50
+
+# Upstash Redis REST URL (preferred for Vercel deployments)
+UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+
+# Upstash Redis REST token
+UPSTASH_REDIS_REST_TOKEN=your_upstash_token_here
+
+# =============================================================================
+# AI/LLM CONFIGURATION
+# =============================================================================
+
+# OpenAI API key (required)
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Default OpenAI model
+OPENAI_MODEL=gpt-4o
+
+# Default temperature for AI models
+MODEL_TEMPERATURE=0.7
+
+# =============================================================================
+# LANGGRAPH ORCHESTRATION CONFIGURATION
+# =============================================================================
+
+# Default model for LangGraph
+LANGGRAPH_DEFAULT_MODEL=gpt-4o
+
+# Temperature for LangGraph operations
+LANGGRAPH_TEMPERATURE=0.7
+
+# Max tokens for LangGraph
+LANGGRAPH_MAX_TOKENS=4096
+
+# Router model for LangGraph
+LANGGRAPH_ROUTER_MODEL=gpt-4o-mini
+
+# Router temperature
+LANGGRAPH_ROUTER_TEMPERATURE=0.1
+
+# Checkpoint storage type (memory, postgres, etc.)
+LANGGRAPH_CHECKPOINT_STORAGE=memory
+
+# Checkpoint connection string (for postgres storage)
+LANGGRAPH_CHECKPOINT_CONNECTION=
+
+# Max retries for LangGraph operations
+LANGGRAPH_MAX_RETRIES=3
+
+# Retry delay in seconds
+LANGGRAPH_RETRY_DELAY=1.0
+
+# Escalation threshold
+LANGGRAPH_ESCALATION_THRESHOLD=5
+
+# Timeout for operations
+LANGGRAPH_TIMEOUT_SECONDS=30
+
+# Enable LangSmith tracing
+LANGGRAPH_ENABLE_LANGSMITH=true
+
+# LangSmith project name
+LANGSMITH_PROJECT=tripsage-langgraph
+
+# LangSmith API key
+LANGSMITH_API_KEY=
+
+# Enable parallel execution
+LANGGRAPH_PARALLEL_EXECUTION=true
+
+# Max concurrent tools
+LANGGRAPH_MAX_CONCURRENT_TOOLS=5
+
+# Tool timeout
+LANGGRAPH_TOOL_TIMEOUT_SECONDS=10
+
+# Session timeout in hours
+LANGGRAPH_SESSION_TIMEOUT_HOURS=24
+
+# Max message history
+LANGGRAPH_MAX_MESSAGE_HISTORY=100
+
+# Enable conversation memory
+LANGGRAPH_ENABLE_CONVERSATION_MEMORY=true
+
+# Enable human-in-the-loop
+LANGGRAPH_ENABLE_HITL=false
+
+# Enable advanced routing
+LANGGRAPH_ENABLE_ADVANCED_ROUTING=true
+
+# Enable memory updates
+LANGGRAPH_ENABLE_MEMORY_UPDATES=true
+
+# Enable error recovery
+LANGGRAPH_ENABLE_ERROR_RECOVERY=true
+
+# =============================================================================
+# RATE LIMITING CONFIGURATION
+# =============================================================================
+
+# Enable rate limiting
+RATE_LIMIT_ENABLED=true
+
+# Use DragonflyDB for distributed rate limiting
+RATE_LIMIT_USE_DRAGONFLY=true
+
+# Default requests per minute
+RATE_LIMIT_REQUESTS_PER_MINUTE=60
+
+# Default requests per hour
+RATE_LIMIT_REQUESTS_PER_HOUR=1000
+
+# Default requests per day
+RATE_LIMIT_REQUESTS_PER_DAY=10000
+
+# Default burst size
+RATE_LIMIT_BURST_SIZE=10
+
+# Enable sliding window
+RATE_LIMIT_ENABLE_SLIDING_WINDOW=true
+
+# Enable token bucket
+RATE_LIMIT_ENABLE_TOKEN_BUCKET=true
+
+# Enable burst protection
+RATE_LIMIT_ENABLE_BURST_PROTECTION=true
+
+# Enable monitoring
+RATE_LIMIT_ENABLE_MONITORING=true
+
+# Storage URI for rate limits
+RATE_LIMIT_STORAGE_URI=
+
+# Default rate limit string
+DEFAULT_RATE_LIMIT=120/minute
+
+# Rate limiting implementation (redispy, etc.)
+LIMITS_IMPL=redispy
+
+# =============================================================================
+# WEBSOCKET CONFIGURATION
+# =============================================================================
+
+# Enable WebSocket functionality
+ENABLE_WEBSOCKETS=true
+
+# WebSocket timeout in seconds
+WEBSOCKET_TIMEOUT=300
+
+# Maximum concurrent WebSocket connections
+MAX_WEBSOCKET_CONNECTIONS=1000
+
+# =============================================================================
+# MONITORING AND OBSERVABILITY
+# =============================================================================
+
+# Enable database monitoring
+ENABLE_DATABASE_MONITORING=true
+
+# Enable security monitoring
+ENABLE_SECURITY_MONITORING=true
+
+# Enable auto recovery
+ENABLE_AUTO_RECOVERY=true
+
+# Database health check interval
+DB_HEALTH_CHECK_INTERVAL=30.0
+
+# Database security check interval
+DB_SECURITY_CHECK_INTERVAL=60.0
+
+# Max recovery attempts
+DB_MAX_RECOVERY_ATTEMPTS=3
+
+# Recovery delay
+DB_RECOVERY_DELAY=5.0
+
+# OpenTelemetry endpoint
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+
+# OpenTelemetry protocol
+OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+
+# Hostname for instance identification
+HOSTNAME=local
+
+# Custom duration histogram buckets
+TRIPSAGE_DURATION_BUCKETS=0.005,0.01,0.025,0.05,0.1,0.25,0.5,1,2.5,5,10
+
+# Enable FastAPI instrumentation
+ENABLE_FASTAPI_INSTRUMENTATION=false
+
+# Enable ASGI instrumentation
+ENABLE_ASGI_INSTRUMENTATION=false
+
+# Enable httpx instrumentation
+ENABLE_HTTPX_INSTRUMENTATION=false
+
+# Enable Redis instrumentation
+ENABLE_REDIS_INSTRUMENTATION=false
+
+# =============================================================================
+# EXTERNAL API CONFIGURATION
+# =============================================================================
+
+# Google Maps Platform API key
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Google Maps timeout
+GOOGLE_MAPS_TIMEOUT=10.0
+
+# Google Maps retry timeout
+GOOGLE_MAPS_RETRY_TIMEOUT=60
+
+# Google Maps QPS throttle
+GOOGLE_MAPS_QUERIES_PER_SECOND=10
+
+# Duffel API token (preferred)
+DUFFEL_ACCESS_TOKEN=your_duffel_access_token_here
+
+# Legacy Duffel token (deprecated, use DUFFEL_ACCESS_TOKEN)
+DUFFEL_API_TOKEN=your_duffel_access_token_here
+
+# Google Calendar credentials file path
+GOOGLE_CALENDAR_CREDENTIALS_FILE=credentials.json
+
+# Google Calendar token file path
+GOOGLE_CALENDAR_TOKEN_FILE=token.json
 
 # =============================================================================
 # MCP TOOL CONFIGURATION
 # =============================================================================
+
+# Crawl4AI MCP API key
+CRAWL4AI_MCP_API_KEY=
+
+# Crawl4AI MCP endpoint
+CRAWL4AI_MCP_ENDPOINT=http://localhost:11235
+
+# Crawl4AI MCP timeout
+CRAWL4AI_MCP_TIMEOUT=30.0
 
 # Weather APIs
 OPENWEATHERMAP_API_KEY=your_openweathermap_api_key_here
@@ -134,33 +329,63 @@ BROWSER_MCP_ENDPOINT=http://localhost:3002
 
 # Travel APIs
 FLIGHTS_MCP_ENDPOINT=http://localhost:3003
-# Duffel access token used by the Duffel Flights API v2 provider.
-# Preferred: DUFFEL_ACCESS_TOKEN; legacy alias supported: DUFFEL_API_TOKEN.
-DUFFEL_ACCESS_TOKEN=your_duffel_access_token_here
-# DUFFEL_API_TOKEN=your_duffel_access_token_here
-GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # Memory and Calendar
 MEMORY_MCP_ENDPOINT=http://localhost:3008
 CALENDAR_MCP_ENDPOINT=http://localhost:3010
 
 # =============================================================================
-# AGENT CONFIGURATION NOTES
+# FRONTEND/BACKEND COMMUNICATION
 # =============================================================================
 
-# Temperature Guide:
-# - 0.0-0.3: Very focused, deterministic (good for budget calculations)
-# - 0.4-0.6: Balanced creativity and focus (good for planning)
-# - 0.7-1.0: More creative and varied (good for research)
-# - 1.0+: Highly creative but less predictable
+# Backend API URL for frontend
+BACKEND_API_URL=http://localhost:8001
 
-# Runtime Override Examples:
-# - Budget agent with higher creativity: temperature=0.5 override
-# - Production safety: Use AGENT_PRODUCTION_TEMPERATURE
-# - A/B testing: Override specific agent parameters
+# Frontend API URL configuration
+NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_API_BASE_URL=/api
 
-# Environment Priority Order:
-# 1. Runtime overrides (highest priority)
-# 2. Agent-specific configuration
-# 3. Environment-specific defaults
-# 4. Global defaults (lowest priority)
+# WebSocket URL
+NEXT_PUBLIC_WS_URL=ws://localhost:8001
+
+# Base path for frontend (for subfolder deployments)
+NEXT_PUBLIC_BASE_PATH=
+
+# =============================================================================
+# FRONTEND PUBLIC CONFIGURATION
+# =============================================================================
+
+# Supabase public configuration (required for frontend)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+
+# App branding
+NEXT_PUBLIC_APP_NAME=TripSage
+NEXT_PUBLIC_APP_VERSION=1.0.0
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# Error reporting
+NEXT_PUBLIC_ERROR_REPORTING_ENDPOINT=
+NEXT_PUBLIC_ERROR_REPORTING_API_KEY=
+
+# Node environment
+NODE_ENV=development
+
+# =============================================================================
+# DEVELOPMENT AND DEBUGGING
+# =============================================================================
+
+# Enable verbose logging
+VERBOSE_LOGGING=false
+
+# Mock external APIs in development
+MOCK_EXTERNAL_APIS=false
+
+# Seed database in development
+SEED_DATABASE=false
+
+# Disable validation in development
+DISABLE_VALIDATION=false
+
+# Analyze bundle in development
+ANALYZE=false
