chore: consolidate environment configuration and update feature flags
- Merged multiple individual feature flags into a single LANGGRAPH_FEATURES variable for streamlined configuration.
- Updated .env.example and related documentation to reflect new consolidated settings.
- Adjusted API client and error service to accommodate changes in environment variable handling.
- Removed deprecated settings and improved clarity in rate limiting and OTEL instrumentation configurations.

--- a/.env.example
+++ b/.env.example
@@ -154,20 +154,8 @@ LANGGRAPH_SESSION_TIMEOUT_HOURS=24
 # Max message history
 LANGGRAPH_MAX_MESSAGE_HISTORY=100
 
-# Enable conversation memory
-LANGGRAPH_ENABLE_CONVERSATION_MEMORY=true
-
-# Enable human-in-the-loop
-LANGGRAPH_ENABLE_HITL=false
-
-# Enable advanced routing
-LANGGRAPH_ENABLE_ADVANCED_ROUTING=true
-
-# Enable memory updates
-LANGGRAPH_ENABLE_MEMORY_UPDATES=true
-
-# Enable error recovery
-LANGGRAPH_ENABLE_ERROR_RECOVERY=true
+# LangGraph feature flags (comma-separated: conversation_memory,human_in_loop,advanced_routing,memory_updates,error_recovery)
+LANGGRAPH_FEATURES=conversation_memory,advanced_routing,memory_updates,error_recovery
 
 # =============================================================================
 # RATE LIMITING CONFIGURATION
@@ -191,14 +179,8 @@ RATE_LIMIT_REQUESTS_PER_DAY=10000
 # Default burst size
 RATE_LIMIT_BURST_SIZE=10
 
-# Enable sliding window
-RATE_LIMIT_ENABLE_SLIDING_WINDOW=true
-
-# Enable token bucket
-RATE_LIMIT_ENABLE_TOKEN_BUCKET=true
-
-# Enable burst protection
-RATE_LIMIT_ENABLE_BURST_PROTECTION=true
+# Rate limiting strategy (comma-separated: sliding_window,token_bucket,burst_protection)
+RATE_LIMIT_STRATEGY=sliding_window,token_bucket,burst_protection
 
 # Enable monitoring
 RATE_LIMIT_ENABLE_MONITORING=true
@@ -211,19 +193,6 @@ DEFAULT_RATE_LIMIT=120/minute
 
 # Rate limiting implementation (redispy, etc.)
 LIMITS_IMPL=redispy
-
-# =============================================================================
-# WEBSOCKET CONFIGURATION
-# =============================================================================
-
-# Enable WebSocket functionality
-ENABLE_WEBSOCKETS=true
-
-# WebSocket timeout in seconds
-WEBSOCKET_TIMEOUT=300
-
-# Maximum concurrent WebSocket connections
-MAX_WEBSOCKET_CONNECTIONS=1000
 
 # =============================================================================
 # MONITORING AND OBSERVABILITY
@@ -262,17 +231,8 @@ HOSTNAME=local
 # Custom duration histogram buckets
 TRIPSAGE_DURATION_BUCKETS=0.005,0.01,0.025,0.05,0.1,0.25,0.5,1,2.5,5,10
 
-# Enable FastAPI instrumentation
-ENABLE_FASTAPI_INSTRUMENTATION=false
-
-# Enable ASGI instrumentation
-ENABLE_ASGI_INSTRUMENTATION=false
-
-# Enable httpx instrumentation
-ENABLE_HTTPX_INSTRUMENTATION=false
-
-# Enable Redis instrumentation
-ENABLE_REDIS_INSTRUMENTATION=false
+# OTEL instrumentation (comma-separated: fastapi,asgi,httpx,redis)
+OTEL_INSTRUMENTATION=
 
 # =============================================================================
 # EXTERNAL API CONFIGURATION
@@ -290,11 +250,8 @@ GOOGLE_MAPS_RETRY_TIMEOUT=60
 # Google Maps QPS throttle
 GOOGLE_MAPS_QUERIES_PER_SECOND=10
 
-# Duffel API token (preferred)
+# Duffel API token
 DUFFEL_ACCESS_TOKEN=your_duffel_access_token_here
-
-# Legacy Duffel token (deprecated, use DUFFEL_ACCESS_TOKEN)
-DUFFEL_API_TOKEN=your_duffel_access_token_here
 
 # Google Calendar credentials file path
 GOOGLE_CALENDAR_CREDENTIALS_FILE=credentials.json
@@ -343,9 +300,8 @@ BACKEND_API_URL=http://localhost:8001
 
 # Frontend API URL configuration
 NEXT_PUBLIC_API_URL=http://localhost:8000
-NEXT_PUBLIC_API_BASE_URL=/api
 
-# WebSocket URL
+# WebSocket URL (derived from API URL if not specified)
 NEXT_PUBLIC_WS_URL=ws://localhost:8001
 
 # Base path for frontend (for subfolder deployments)
@@ -361,21 +317,15 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 
 # App branding
 NEXT_PUBLIC_APP_NAME=TripSage
-NEXT_PUBLIC_APP_VERSION=1.0.0
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
-
-# Error reporting
-NEXT_PUBLIC_ERROR_REPORTING_ENDPOINT=
-NEXT_PUBLIC_ERROR_REPORTING_API_KEY=
 
 # Node environment
 NODE_ENV=development
 
 # =============================================================================
-# DEVELOPMENT AND DEBUGGING
+# DEVELOPMENT AND DEBUGGING (DEVELOPMENT ONLY)
 # =============================================================================
 
-# Enable verbose logging
+# Enable verbose logging (development only)
 VERBOSE_LOGGING=false
 
 # Mock external APIs in development
