chore: update environment configuration and LangGraph settings
- Removed deprecated LangSmith tracing option from .env.example.
- Consolidated LangGraph feature flags into a single variable, adding 'langsmith' for improved monitoring.
- Enhanced documentation for environment configuration, including new LangGraph orchestration parameters and rate limiting strategies.
- Cleaned up settings reference by removing unused Airbnb MCP cache TTL.

--- a/.env.example
+++ b/.env.example
@@ -130,9 +130,6 @@ LANGGRAPH_ESCALATION_THRESHOLD=5
 # Timeout for operations
 LANGGRAPH_TIMEOUT_SECONDS=30
 
-# Enable LangSmith tracing
-LANGGRAPH_ENABLE_LANGSMITH=true
-
 # LangSmith project name
 LANGSMITH_PROJECT=tripsage-langgraph
 
@@ -154,8 +151,8 @@ LANGGRAPH_SESSION_TIMEOUT_HOURS=24
 # Max message history
 LANGGRAPH_MAX_MESSAGE_HISTORY=100
 
-# LangGraph feature flags (comma-separated: conversation_memory,human_in_loop,advanced_routing,memory_updates,error_recovery)
-LANGGRAPH_FEATURES=conversation_memory,advanced_routing,memory_updates,error_recovery
+# LangGraph feature flags (comma-separated: conversation_memory,human_in_loop,advanced_routing,memory_updates,error_recovery,langsmith)
+LANGGRAPH_FEATURES=conversation_memory,advanced_routing,memory_updates,error_recovery,langsmith
 
 # =============================================================================
 # RATE LIMITING CONFIGURATION
