--- a/.env.test
+++ b/.env.test
@@ -1,36 +1,342 @@
 # Test environment variables for TripSage
+# Copy this file to .env and update with your actual values
+
+# =============================================================================
+# CORE APPLICATION SETTINGS
+# =============================================================================
+
+# Environment: development, production, test, testing
 ENVIRONMENT=testing
-DEBUG=True
 
-# Database configuration (Supabase)
-DATABASE_URL=https://your-supabase-project.supabase.co
-DATABASE_PUBLIC_KEY=placeholder-supabase-public-key
-DATABASE_SERVICE_KEY=placeholder-supabase-service-role-key
-DATABASE_JWT_SECRET=placeholder-supabase-jwt-secret
-SECRET_KEY=placeholder-application-secret-key
+# Debug mode (true/false)
+DEBUG=true
 
-# Redis/Cache (DragonflyDB)
+# Logging level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=DEBUG
+
+# Application secret key for encryption and signing (keep secret!)
+SECRET_KEY=test-application-secret-key
+
+# =============================================================================
+# API SERVER CONFIGURATION
+# =============================================================================
+
+# API server host
+TRIPSAGE_API_HOST=127.0.0.1
+
+# API server port
+TRIPSAGE_API_PORT=8001
+
+# API server reload in development (true/false)
+TRIPSAGE_API_RELOAD=false
+
+# API metadata
+API_TITLE=TripSage API
+API_VERSION=1.0.0
+API_PREFIX=/api/v1
+
+# CORS settings
+API_CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+API_CORS_CREDENTIALS=true
+
+# =============================================================================
+# DATABASE CONFIGURATION (Supabase)
+# =============================================================================
+
+# Supabase project URL
+DATABASE_URL=https://test-project.supabase.co
+
+# Supabase service role key (keep secret!)
+DATABASE_SERVICE_KEY=test-service-role-key
+
+# Supabase public anon key
+DATABASE_PUBLIC_KEY=test-anon-key
+
+# Supabase JWT secret (keep secret!)
+DATABASE_JWT_SECRET=test-jwt-secret
+
+# PostgreSQL connection URL (optional, overrides Supabase URL if provided)
+POSTGRES_URL=postgresql://postgres:test-password@aws-0-test-region.pooler.supabase.com:6543/postgres
+
+# Alternative database URL for scripts/tools
+SUPABASE_DB_URL=postgresql://postgres:test-password@db.test-project.supabase.co:5432/postgres
+
+# =============================================================================
+# CACHE/REDIS CONFIGURATION
+# =============================================================================
+
+# Redis connection URL
 REDIS_URL=redis://localhost:6379/1
-REDIS_PASSWORD=placeholder-redis-password
-DRAGONFLY_URL=redis://localhost:6379/1
-DRAGONFLY_PASSWORD=placeholder-redis-password
 
-# AI Services
-OPENAI_API_KEY=placeholder-openai-api-key
-OPENAI_MODEL=gpt-4
-ANTHROPIC_API_KEY=placeholder-anthropic-api-key
+# Redis password (if authentication enabled)
+REDIS_PASSWORD=test-redis-password
 
-# External API Keys (test values)
-WEATHER_API_KEY=placeholder-weather-api-key
-GOOGLE_MAPS_API_KEY=placeholder-google-maps-api-key
-DUFFEL_API_KEY=placeholder-duffel-api-key
+# Maximum concurrent connections
+REDIS_MAX_CONNECTIONS=50
 
-# MCP and integration endpoints
-MEMORY_MCP_ENDPOINT=https://memory-mcp.example.com
-MEMORY_MCP_API_KEY=placeholder-memory-api-key
-TRIPSAGE_MEMORY_MCP_URL=http://localhost:8000
+# Upstash Redis REST URL (preferred for Vercel deployments)
+UPSTASH_REDIS_REST_URL=https://test-redis.upstash.io
+
+# Upstash Redis REST token
+UPSTASH_REDIS_REST_TOKEN=test-upstash-token
+
+# =============================================================================
+# AI/LLM CONFIGURATION
+# =============================================================================
+
+# OpenAI API key (required)
+OPENAI_API_KEY=test-openai-api-key
+
+# Default OpenAI model
+OPENAI_MODEL=gpt-4o
+
+# Default temperature for AI models
+MODEL_TEMPERATURE=0.7
+
+# =============================================================================
+# LANGGRAPH ORCHESTRATION CONFIGURATION
+# =============================================================================
+
+# Default model for LangGraph
+LANGGRAPH_DEFAULT_MODEL=gpt-4o
+
+# Temperature for LangGraph operations
+LANGGRAPH_TEMPERATURE=0.7
+
+# Max tokens for LangGraph
+LANGGRAPH_MAX_TOKENS=4096
+
+# Router model for LangGraph
+LANGGRAPH_ROUTER_MODEL=gpt-4o-mini
+
+# Router temperature
+LANGGRAPH_ROUTER_TEMPERATURE=0.1
+
+# Checkpoint storage type (memory, postgres, etc.)
+LANGGRAPH_CHECKPOINT_STORAGE=memory
+
+# Checkpoint connection string (for postgres storage)
+LANGGRAPH_CHECKPOINT_CONNECTION=
+
+# Max retries for LangGraph operations
+LANGGRAPH_MAX_RETRIES=3
+
+# Retry delay in seconds
+LANGGRAPH_RETRY_DELAY=1.0
+
+# Escalation threshold
+LANGGRAPH_ESCALATION_THRESHOLD=5
+
+# Timeout for operations
+LANGGRAPH_TIMEOUT_SECONDS=30
+
+# LangSmith project name
+LANGSMITH_PROJECT=tripsage-langgraph-test
+
+# LangSmith API key
+LANGSMITH_API_KEY=
+
+# Enable parallel execution
+LANGGRAPH_PARALLEL_EXECUTION=true
+
+# Max concurrent tools
+LANGGRAPH_MAX_CONCURRENT_TOOLS=5
+
+# Tool timeout
+LANGGRAPH_TOOL_TIMEOUT_SECONDS=10
+
+# Session timeout in hours
+LANGGRAPH_SESSION_TIMEOUT_HOURS=24
+
+# Max message history
+LANGGRAPH_MAX_MESSAGE_HISTORY=100
+
+# LangGraph feature flags (comma-separated: conversation_memory,human_in_loop,advanced_routing,memory_updates,error_recovery,langsmith)
+LANGGRAPH_FEATURES=conversation_memory,advanced_routing,memory_updates,error_recovery
+
+# =============================================================================
+# RATE LIMITING CONFIGURATION
+# =============================================================================
+
+# Enable rate limiting
+RATE_LIMIT_ENABLED=true
+
+# Use DragonflyDB for distributed rate limiting
+RATE_LIMIT_USE_DRAGONFLY=true
+
+# Default requests per minute
+RATE_LIMIT_REQUESTS_PER_MINUTE=60
+
+# Default requests per hour
+RATE_LIMIT_REQUESTS_PER_HOUR=1000
+
+# Default requests per day
+RATE_LIMIT_REQUESTS_PER_DAY=10000
+
+# Default burst size
+RATE_LIMIT_BURST_SIZE=10
+
+# Rate limiting strategy (comma-separated: sliding_window,token_bucket,burst_protection)
+RATE_LIMIT_STRATEGY=sliding_window,token_bucket,burst_protection
+
+# Enable monitoring
+RATE_LIMIT_ENABLE_MONITORING=true
+
+# Storage URI for rate limits
+RATE_LIMIT_STORAGE_URI=
+
+# Default rate limit string
+DEFAULT_RATE_LIMIT=120/minute
+
+# Rate limiting implementation (redispy, etc.)
+LIMITS_IMPL=redispy
+
+# =============================================================================
+# MONITORING AND OBSERVABILITY
+# =============================================================================
+
+# Enable database monitoring
+ENABLE_DATABASE_MONITORING=true
+
+# Enable security monitoring
+ENABLE_SECURITY_MONITORING=true
+
+# Enable auto recovery
+ENABLE_AUTO_RECOVERY=true
+
+# Database health check interval
+DB_HEALTH_CHECK_INTERVAL=30.0
+
+# Database security check interval
+DB_SECURITY_CHECK_INTERVAL=60.0
+
+# Max recovery attempts
+DB_MAX_RECOVERY_ATTEMPTS=3
+
+# Recovery delay
+DB_RECOVERY_DELAY=5.0
+
+# OpenTelemetry endpoint
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+
+# OpenTelemetry protocol
+OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+
+# Hostname for instance identification
+HOSTNAME=test
+
+# Custom duration histogram buckets
+TRIPSAGE_DURATION_BUCKETS=0.005,0.01,0.025,0.05,0.1,0.25,0.5,1,2.5,5,10
+
+# OTEL instrumentation (comma-separated: fastapi,asgi,httpx,redis)
+OTEL_INSTRUMENTATION=
+
+# =============================================================================
+# EXTERNAL API CONFIGURATION
+# =============================================================================
+
+# Google Maps Platform API key
+GOOGLE_MAPS_API_KEY=test-google-maps-api-key
+
+# Google Maps timeout
+GOOGLE_MAPS_TIMEOUT=10.0
+
+# Google Maps retry timeout
+GOOGLE_MAPS_RETRY_TIMEOUT=60
+
+# Google Maps QPS throttle
+GOOGLE_MAPS_QUERIES_PER_SECOND=10
+
+# Duffel API token
+DUFFEL_ACCESS_TOKEN=test-duffel-access-token
+
+# Google Calendar credentials file path
+GOOGLE_CALENDAR_CREDENTIALS_FILE=credentials.json
+
+# Google Calendar token file path
+GOOGLE_CALENDAR_TOKEN_FILE=token.json
+
+# =============================================================================
+# MCP TOOL CONFIGURATION
+# =============================================================================
+
+# Crawl4AI MCP API key
+CRAWL4AI_MCP_API_KEY=
+
+# Crawl4AI MCP endpoint
+CRAWL4AI_MCP_ENDPOINT=http://localhost:11235
+
+# Crawl4AI MCP timeout
+CRAWL4AI_MCP_TIMEOUT=30.0
+
+# Weather APIs
+OPENWEATHERMAP_API_KEY=test-openweathermap-api-key
+VISUAL_CROSSING_API_KEY=test-visual-crossing-api-key
+
+# Web Crawling
+WEBCRAWL_MCP_ENDPOINT=http://localhost:3001
+FIRECRAWL_API_KEY=test-firecrawl-api-key
+
+# Browser Automation
+PLAYWRIGHT_MCP_ENDPOINT=http://localhost:3004
+BROWSER_MCP_ENDPOINT=http://localhost:3002
+
+# Travel APIs
+FLIGHTS_MCP_ENDPOINT=http://localhost:3003
+
+# Memory and Calendar
+MEMORY_MCP_ENDPOINT=http://localhost:3008
+CALENDAR_MCP_ENDPOINT=http://localhost:3010
+
+# =============================================================================
+# FRONTEND/BACKEND COMMUNICATION
+# =============================================================================
+
+# Backend API URL for frontend
+BACKEND_API_URL=http://localhost:8001
+
+# Frontend API URL configuration
+NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# WebSocket URL (derived from API URL if not specified)
+NEXT_PUBLIC_WS_URL=ws://localhost:8001
+
+# Base path for frontend (for subfolder deployments)
+NEXT_PUBLIC_BASE_PATH=
+
+# =============================================================================
+# FRONTEND PUBLIC CONFIGURATION
+# =============================================================================
+
+# Supabase public configuration (required for frontend)
+NEXT_PUBLIC_SUPABASE_URL=https://test-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=test-anon-key
+
+# App branding
+NEXT_PUBLIC_APP_NAME=TripSage
+
+# Node environment
+NODE_ENV=test
+
+# =============================================================================
+# DEVELOPMENT AND DEBUGGING (DEVELOPMENT ONLY)
+# =============================================================================
+
+# Enable verbose logging (development only)
+VERBOSE_LOGGING=true
+
+# Mock external APIs in development
+MOCK_EXTERNAL_APIS=true
+
+# Seed database in development
+SEED_DATABASE=false
+
+# Disable validation in development
+DISABLE_VALIDATION=false
+
+# Analyze bundle in development
+ANALYZE=false
+
+# Test-specific overrides
 TRIPSAGE_TEST_MODE=true
-
-# Rate Limiting
-RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_WINDOW=60
+TRIPSAGE_MEMORY_MCP_URL=http://localhost:8000
