chore: update environment variables and test setup for API integration
- Replaced DUFFEL_API_KEY with DUFFEL_ACCESS_TOKEN in docker-compose and README for consistency.
- Added mocks for ResizeObserver, IntersectionObserver, and CSS.supports in test setup to enhance test reliability.
- Removed duplicate mock definitions from the test setup file to streamline the testing process.
- Introduced integration tests for ApiKeyService, covering database interactions and service health checks.
- Added unit tests for BaseAgent and ChatAgent, ensuring proper functionality and error handling in agent operations.

--- a/docker/docker-compose.mcp.yml
+++ b/docker/docker-compose.mcp.yml
@@ -76,7 +76,7 @@ services:
       - SUPABASE_URL=http://supabase:8000
       - SUPABASE_KEY=${SUPABASE_SERVICE_ROLE_KEY:-your-service-role-key}
       - MEM0_CONFIG=${MEM0_CONFIG:-'{"vector_store":{"provider":"pgvector"}}'}
-      - DUFFEL_API_KEY=${DUFFEL_API_KEY}
+      - DUFFEL_ACCESS_TOKEN=${DUFFEL_ACCESS_TOKEN}
       - GOOGLE_MAPS_API_KEY=${GOOGLE_MAPS_API_KEY}
       - OPENWEATHERMAP_API_KEY=${OPENWEATHERMAP_API_KEY}
       - CRAWL4AI_API_KEY=${CRAWL4AI_API_KEY:-}
