feat: enhance agent creation and file handling in API
- Updated the `create_agent` function to support additional keyword arguments for better flexibility, including `instructions`, `llm`, and `summary_interval`.
- Improved error handling for unsupported keyword arguments in agent creation.
- Enhanced file upload and retrieval endpoints with better error isolation and type hints for improved clarity.
- Refactored search analytics tracking to ensure type safety and improved data handling.
- Updated various API endpoints to utilize query parameters for pagination, enhancing usability.
- Added type hints and improved logging for better maintainability and debugging.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -282,8 +282,9 @@ exclude = [
     ".pytest_cache",
     ".ruff_cache",
     ".mypy_cache",
-    ".venv",
 ]
+venvPath = "."
+venv = ".venv"
 pythonVersion = "3.13"
 typeCheckingMode = "strict"
 reportMissingImports = "warning"
@@ -323,6 +324,7 @@ disable = [
     "too-many-locals",
     "too-many-branches",
     "consider-using-dict-items",
+    "fixme",
 ]
 
 [tool.coverage.run]
