chore: update changelog and documentation for Realtime features and migration adjustments
- Added details about newly deployed Edge Functions and migration for webhook_config endpoints in CHANGELOG.md.
- Updated error-codes.md to reflect changes in terminology from "WebSocket" to "Realtime" and improved implementation examples.
- Revised rest-endpoints.md to clarify real-time features and their usage with Supabase.
- Modified config.toml to disable unused OAuth providers by default, reducing CI warnings.
- Removed obsolete migration file to align local history with remote version.

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -56,13 +56,13 @@ enable_confirmations = true
 
 # OAuth providers (configure in Supabase Dashboard)
 [auth.external.google]
-enabled = true
+enabled = false
 client_id = "env(GOOGLE_CLIENT_ID)"
 secret = "env(GOOGLE_CLIENT_SECRET)"
 redirect_uri = "http://localhost:54321/auth/v1/callback"
 
 [auth.external.github]
-enabled = true
+enabled = false
 client_id = "env(GITHUB_CLIENT_ID)"
 secret = "env(GITHUB_CLIENT_SECRET)"
 redirect_uri = "http://localhost:54321/auth/v1/callback"
