refactor: enhance type checking and improve test setup
- Updated `pyproject.toml` to enable stricter type checking and added stub path for type stubs.
- Refactored authentication middleware tests to utilize a valid JWT token for improved accuracy.
- Enhanced orchestrator dependency injection tests by adding a mock configuration service.
- Improved type annotations across various schemas and dependencies for better clarity and type safety.
- Streamlined health check responses and ensured consistent type definitions in API schemas.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -294,8 +294,9 @@ venvPath = "."
 venv = ".venv"
 pythonVersion = "3.13"
 typeCheckingMode = "strict"
+useLibraryCodeForTypes = true
+stubPath = "typings"
 reportMissingImports = "warning"
-reportMissingTypeStubs = false
 
 [tool.uv]
 managed = true
