chore: update pyproject.toml to modify pylint configuration
- Changed the per-file ignores for pylint to a more concise format, disabling the "wrong-import-position" rule for all test files.
- This adjustment enhances linting flexibility and maintains consistency in the project's code quality standards.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -338,8 +338,8 @@ disable = [
     "duplicate-code",
 ]
 
-[tool.pylint.per-file-ignores]
-"tests/**/*.py" = ["wrong-import-position"]
+[tool.pylint."tests/**/*"]
+disable = ["wrong-import-position"]
 
 [tool.coverage.run]
 branch = true
