refactor: update environment configuration and enhance API endpoint clarity
- Changed default API port from 8001 to 8080 in the environment example file for consistency with updated service configurations.
- Renamed CORS settings for clarity, aligning with standard naming conventions.
- Updated the FastAPI chat endpoint documentation to include Supabase Realtime channels integration, enhancing clarity on functionality.
- Improved type annotations in test files to enhance type safety and maintainability.
- Removed WebSocket configuration from test settings to streamline the testing environment.

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ SECRET_KEY=your-application-secret-key-here
 TRIPSAGE_API_HOST=127.0.0.1
 
 # API server port
-TRIPSAGE_API_PORT=8001
+TRIPSAGE_API_PORT=8080
 
 # API server reload in development (true/false)
 TRIPSAGE_API_RELOAD=true
@@ -33,11 +33,9 @@ TRIPSAGE_API_RELOAD=true
 # API metadata
 API_TITLE=TripSage API
 API_VERSION=1.0.0
-API_PREFIX=/api/v1
-
 # CORS settings
-API_CORS_ORIGINS=http://localhost:3000,http://localhost:3001
-API_CORS_CREDENTIALS=true
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+CORS_CREDENTIALS=true
 
 # =============================================================================
 # DATABASE CONFIGURATION (Supabase)
@@ -59,7 +57,8 @@ DATABASE_JWT_SECRET=your_jwt_secret_here
 POSTGRES_URL=postgresql://postgres:your-password@aws-0-your-region.pooler.supabase.com:6543/postgres
 
 # Alternative database URL for scripts/tools
-SUPABASE_DB_URL=postgresql://postgres:your-password@db.your-project.supabase.co:5432/postgres
+# Optional scripts/tools override (not used by server runtime)
+# SUPABASE_DB_URL=postgresql://postgres:your-password@db.your-project.supabase.co:5432/postgres
 
 # =============================================================================
 # CACHE/REDIS CONFIGURATION
@@ -161,9 +160,6 @@ LANGGRAPH_FEATURES=conversation_memory,advanced_routing,memory_updates,error_rec
 # Enable rate limiting
 RATE_LIMIT_ENABLED=true
 
-# Use DragonflyDB for distributed rate limiting
-RATE_LIMIT_USE_DRAGONFLY=true
-
 # Default requests per minute
 RATE_LIMIT_REQUESTS_PER_MINUTE=60
 
@@ -179,17 +175,9 @@ RATE_LIMIT_BURST_SIZE=10
 # Rate limiting strategy (comma-separated: sliding_window,token_bucket,burst_protection)
 RATE_LIMIT_STRATEGY=sliding_window,token_bucket,burst_protection
 
-# Enable monitoring
 RATE_LIMIT_ENABLE_MONITORING=true
 
-# Storage URI for rate limits
-RATE_LIMIT_STORAGE_URI=
-
-# Default rate limit string
-DEFAULT_RATE_LIMIT=120/minute
-
-# Rate limiting implementation (redispy, etc.)
-LIMITS_IMPL=redispy
+# Note: Backend uses REDIS_URL (TCP/TLS). Upstash REST is for frontend/edge.
 
 # =============================================================================
 # MONITORING AND OBSERVABILITY
@@ -261,13 +249,13 @@ GOOGLE_CALENDAR_TOKEN_FILE=token.json
 # =============================================================================
 
 # Crawl4AI MCP API key
-CRAWL4AI_MCP_API_KEY=
+CRAWL4AI_MCP__API_KEY=
 
 # Crawl4AI MCP endpoint
-CRAWL4AI_MCP_ENDPOINT=http://localhost:11235
+CRAWL4AI_MCP__ENDPOINT=http://localhost:11235
 
 # Crawl4AI MCP timeout
-CRAWL4AI_MCP_TIMEOUT=30.0
+CRAWL4AI_MCP__TIMEOUT=30.0
 
 # Weather APIs
 OPENWEATHERMAP_API_KEY=your_openweathermap_api_key_here
@@ -293,13 +281,13 @@ CALENDAR_MCP_ENDPOINT=http://localhost:3010
 # =============================================================================
 
 # Backend API URL for frontend
-BACKEND_API_URL=http://localhost:8001
+BACKEND_API_URL=http://localhost:8080
 
 # Frontend API URL configuration
-NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_API_URL=http://localhost:8080
 
 # WebSocket URL (derived from API URL if not specified)
-NEXT_PUBLIC_WS_URL=ws://localhost:8001
+NEXT_PUBLIC_WS_URL=ws://localhost:8080
 
 # Base path for frontend (for subfolder deployments)
 NEXT_PUBLIC_BASE_PATH=
