chore: update OpenAI model references to gpt-5 across configuration and codebase
- Updated default OpenAI model from gpt-4o to gpt-5 in environment configuration files and documentation.
- Modified frontend components and schemas to reflect the new model options, including gpt-5 and its variants.
- Adjusted unit tests and orchestration configurations to ensure compatibility with the updated model settings.
- Enhanced API routing and settings management to utilize the new model defaults, improving overall system performance.

--- a/.env.example
+++ b/.env.example
@@ -87,7 +87,7 @@ UPSTASH_REDIS_REST_TOKEN=your_upstash_token_here
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Default OpenAI model
-OPENAI_MODEL=gpt-4o
+OPENAI_MODEL=gpt-5
 
 # Default temperature for AI models
 MODEL_TEMPERATURE=0.7
@@ -97,7 +97,7 @@ MODEL_TEMPERATURE=0.7
 # =============================================================================
 
 # Default model for LangGraph
-LANGGRAPH_DEFAULT_MODEL=gpt-4o
+LANGGRAPH_DEFAULT_MODEL=gpt-5
 
 # Temperature for LangGraph operations
 LANGGRAPH_TEMPERATURE=0.7
@@ -106,7 +106,7 @@ LANGGRAPH_TEMPERATURE=0.7
 LANGGRAPH_MAX_TOKENS=4096
 
 # Router model for LangGraph
-LANGGRAPH_ROUTER_MODEL=gpt-4o-mini
+LANGGRAPH_ROUTER_MODEL=gpt-5-mini
 
 # Router temperature
 LANGGRAPH_ROUTER_TEMPERATURE=0.1
