--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "langchain-openai>=1.0.0,<2.0.0",
     "langgraph>=1.0.0,<2.0.0",
     "openai>=2.5.0,<3.0.0",
+    "anthropic>=0.70.0,<1.0.0",
     "openai-agents>=0.4.0,<0.5.0",
     "mem0ai>=0.1.118,<2.0.0",
     "tenacity>=9.1.2",
