--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,12 +54,14 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@upstash/ratelimit": "2.0.6",
     "@upstash/redis": "^1.35.6",
+    "ai": "^5.0.86",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "12.23.24",
     "lucide-react": "^0.546.0",
+    "nanoid": "^5.1.6",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
@@ -69,6 +71,7 @@
     "react-syntax-highlighter": "^16.0.0",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
+    "use-stick-to-bottom": "^1.1.1",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "web-vitals": "^5.1.0",
