chore: update .gitignore to include JUnit report files
- Added pattern to ignore locally generated JUnit report files located in frontend/junit-*.xml, keeping the repository clean from CI artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,8 @@ htmlcov/
 lcov.info
 *.lcov
 coverage.json
+# JUnit reports generated locally (kept as CI artifacts, not source)
+frontend/junit-*.xml
 # Playwright specific
 tests-examples/
 blob-report/
