--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ai-sdk/openai": "3.0.0-beta.47",
+    "@ai-sdk/react": "3.0.0-beta.92",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -54,7 +56,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@upstash/ratelimit": "2.0.6",
     "@upstash/redis": "^1.35.6",
-    "ai": "^5.0.86",
+    "ai": "6.0.0-beta.92",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -62,13 +64,13 @@
     "framer-motion": "12.23.24",
     "lucide-react": "^0.546.0",
     "nanoid": "^5.1.6",
-    "next": "16.0.0",
+    "next": "16.0.1",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.65.0",
-    "react-syntax-highlighter": "^16.0.0",
+    "react-hook-form": "^7.66.0",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
@@ -79,7 +81,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.7",
+    "@biomejs/biome": "^2.3.2",
     "@eslint/eslintrc": "^3.3.1",
     "@next/bundle-analyzer": "^16.0.0",
     "@playwright/test": "^1.56.1",
