--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "3.0.0-beta.47",
     "@ai-sdk/openai": "3.0.0-beta.47",
     "@ai-sdk/react": "3.0.0-beta.92",
     "@hello-pangea/dnd": "^18.0.1",
@@ -62,6 +63,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "12.23.24",
+    "js-tiktoken": "^1.0.21",
     "lucide-react": "^0.552.0",
     "nanoid": "^5.1.6",
     "next": "16.0.1",
