feat: implement chat sessions and messages API with validation and error handling
- Introduced new API routes for managing chat sessions and messages, including creation, retrieval, and deletion functionalities.
- Added validation for image attachments and extraction of text content from messages to enhance data handling.
- Implemented comprehensive error handling for unauthorized access, rate limiting, and invalid input scenarios.
- Developed integration tests for the chat sessions and messages API to ensure robust functionality and response validation.
- Enhanced existing documentation with detailed descriptions of new features and API behaviors.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -90,6 +90,7 @@
     "@tailwindcss/postcss": "^4.1.15",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jscodeshift": "^17.3.0",
     "@types/node": "24.9.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
@@ -100,6 +101,7 @@
     "eslint-config-next": "16.0.1",
     "husky": "^9.1.7",
     "jose": "^6.1.0",
+    "jscodeshift": "^17.3.0",
     "jsdom": "^27.0.1",
     "jsondiffpatch": "^0.7.3",
     "lint-staged": "^16.2.6",
