--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,21 @@
     "biome:check": "biome check ./src",
     "biome:fix": "biome check ./src --fix",
     "type-check": "tsc --noEmit",
-    "test": "vitest",
-    "test:run": "vitest run",
+    "test": "vitest --test-timeout=6000 --hook-timeout=6000 --teardown-timeout=6000",
+    "test:run": "vitest run --test-timeout=6000 --hook-timeout=6000 --teardown-timeout=6000",
+    "test:short": "vitest run --test-timeout=3000 --hook-timeout=3000 --teardown-timeout=3000",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
-    "prepare": "husky"
+    "prepare": "husky",
+    "codemod:ai-route:dry": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts -d -p",
+    "codemod:ai-route": "npx jscodeshift -t ../scripts/codemods/ai-route-v6-upgrade.js \"src/app/**/route.ts\" --parser=ts",
+    "codemod:ai-messages:dry": "npx jscodeshift -t ../scripts/codemods/ai-chat-messages-convert.js \"src/app/**/route.ts\" --parser=ts -d -p",
+    "codemod:ai-messages": "npx jscodeshift -t ../scripts/codemods/ai-chat-messages-convert.js \"src/app/**/route.ts\" --parser=ts",
+    "codemod:tests-env:dry": "npx jscodeshift -t ../scripts/codemods/tests-env-stub.js \"src/**/*.{test.ts,test.tsx}\" --parser=ts -d -p",
+    "codemod:tests-env": "npx jscodeshift -t ../scripts/codemods/tests-env-stub.js \"src/**/*.{test.ts,test.tsx}\" --parser=ts",
+    "codemod:validate": "pnpm biome:fix && pnpm type-check && pnpm test:run",
+    "codemod:check-idempotency": "pnpm codemod:ai-route:dry && pnpm codemod:ai-messages:dry && pnpm codemod:tests-env:dry && git diff --quiet"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "3.0.0-beta.47",
