``` feat: add OpenRouter attribution metadata to chat streams
- Moved OpenRouter attribution config from Python backend to Next.js frontend (.env.example)
- Added provider metadata to stream start/finish events for client-side tracking
- Updated tests to verify provider metadata is included in message streams
```

--- a/.env.example
+++ b/.env.example
@@ -92,6 +92,11 @@ OPENAI_MODEL=gpt-5
 # Default temperature for AI models
 MODEL_TEMPERATURE=0.7
 
+# OpenRouter Attribution (server-side only in Next.js)
+# See https://openrouter.ai/docs/app-attribution
+OPENROUTER_REFERER=https://your-site.example.com
+OPENROUTER_TITLE=TripSage
+
 # =============================================================================
 # LANGGRAPH ORCHESTRATION CONFIGURATION
 # =============================================================================
