feat: update Biome configuration for linting rules and test overrides
- Changed the linting level for naming conventions from error to warning, allowing for more flexibility in code style.
- Expanded naming convention formats to include both CONSTANT_CASE and camelCase for better compatibility.
- Added overrides for test files to include specific linting rules, enhancing code quality checks in test scenarios.

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -100,14 +100,14 @@
         "useConst": { "level": "error", "fix": "safe" },
         "useTemplate": { "level": "error", "fix": "safe" },
         "useNamingConvention": {
-          "level": "error",
+          "level": "warn",
           "options": {
             "strictCase": true,
             "requireAscii": true,
             "conventions": [
               {
                 "selector": { "kind": "const", "scope": "global" },
-                "formats": ["CONSTANT_CASE"]
+                "formats": ["CONSTANT_CASE", "camelCase"]
               }
             ]
           }
@@ -131,5 +131,18 @@
         "noStaticOnlyClass": "error"
       }
     }
-  }
+  },
+
+  "overrides": [
+    {
+      "includes": ["**/*.test.ts", "**/*.test.tsx", "**/*.spec.ts", "**/*.spec.tsx", "**/__tests__/**"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noExplicitAny": "warn"
+          }
+        }
+      }
+    }
+  ]
 }
